k8s/inventory-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
  namespace: inventory-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
        - name: inventory-api
          image: inventory-api:dev
          imagePullPolicy: Never
          ports:
            - name: grpc
              containerPort: 8080
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
  namespace: inventory-system
spec:
  selector:
    app: inventory-api
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
